--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.8",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.1",
     "socket.io": "^4.2.0",
     "socket.io-client": "^4.2.0"
   },
